--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: objective-c
 osx_image: xcode7.2
-xcode_project: white-fenned.xcodeproj
+xcode_project: white-fennec.xcodeproj
 xcode_scheme: white-fennec
 xcode_sdk: macosx10.11
