--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,8 @@
 language: objective-c
+
+script:
+  - xcodebuild [DEFAULT_OPTIONS] CODE_SIGNING_REQUIRED=NO
+
 osx_image: xcode7.2
 xcode_project: white-fennec.xcodeproj
 xcode_scheme: white-fennec
