--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,10 @@ language: objective-c
 before_script:
   - pip install --user codecov
   
+osx_image: xcode7.2
 xcode_project: white-fennec.xcodeproj
 xcode_scheme: white-fennec
+xcode_sdk: macosx10.11
 
 script: xctool -project white-fennec.xcodeproj -scheme white-fennec build  CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO
 
