--- a/.travis.yml
+++ b/.travis.yml
@@ -2,16 +2,11 @@ language: objective-c
 
 before_script:
   - pip install --user codecov
-  
-osx_image: xcode7.2
-xcode_project: white-fennec.xcodeproj
-xcode_scheme: white-fennec
-xcode_sdk: macosx10.11
 
-script: xctool -project white-fennec.xcodeproj -scheme white-fennec build  CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO
+script: xctool -project white-fennec.xcodeproj -scheme white-fennec build test -sdk macosx10.11 -enableCodeCoverage YES CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO GCC_INSTRUMENT_PROGRAM_FLOW_ARCS=YES GCC_GENERATE_TEST_COVERAGE_FILES=YES
 
 after_success:
-    - codecov
+    - bash <(curl -s https://codecov.io/bash)
 
 notifications:
     email:
