--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ language: objective-c
 before_script:
   - pip install --user codecov
 
-script: xctool -project white-fennec.xcodeproj -scheme white-fennec build test -sdk macosx10.11 YES CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO GCC_INSTRUMENT_PROGRAM_FLOW_ARCS=YES GCC_GENERATE_TEST_COVERAGE_FILES=YES
+script: xctool -project white-fennec.xcodeproj -scheme white-fennec build test -sdk macosx10.11 CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO GCC_INSTRUMENT_PROGRAM_FLOW_ARCS=YES GCC_GENERATE_TEST_COVERAGE_FILES=YES
 
 after_success:
     - bash <(curl -s https://codecov.io/bash)
