--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,19 @@
 language: objective-c
+osx_image: xcode7.2
+xcode_project: white-fennec.xcodeproj
+xcode_scheme: white-fennec
 
 before_script:
   - pip install --user codecov
 
-osx_image: xcode7.2
-xcode_sdk: macosx10.11
-
-script: xctool -project white-fennec.xcodeproj -scheme white-fennec build test CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO GCC_INSTRUMENT_PROGRAM_FLOW_ARCS=YES GCC_GENERATE_TEST_COVERAGE_FILES=YES
+script: 
+    xcodebuild -verbose
+    -project white-fennec.xcodeproj
+    -scheme white-fennec
+    -sdk macosx
+    clean build test
+    -enableCodeCoverage YES
+    | xcpretty -c
 
 after_success:
     - bash <(curl -s https://codecov.io/bash)
