--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ script:
     -sdk macosx
     clean build test
     -enableCodeCoverage YES
+    CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO
     | xcpretty -c
 
 after_success:
